syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

message ActivityShopSheetInfo {
	uint32 sheet_id = 1;
	uint32 begin_time = 2;
	uint32 end_time = 3;
}
